--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p,
+h1,
+h2,
+h3,
+p {
+    margin: 0;
+}
+
+ul{
+    margin: 0;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.list {
+    list-style: none;
+}
+
+img {
+    display: block;
+}
