--- a/src/components/Statistics/StatList/StatList.module.css
+++ b/src/components/Statistics/StatList/StatList.module.css
@@ -1,10 +1,33 @@
+.statList{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    border-radius: 0 0 4px 4px;
+
+}
 .item{
-    display: block;
+    display: grid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+
+}
+.item:nth-child(n){
+    background-color: rgb(1, 209, 216);
+}
+.item:nth-child(2n){
+    background-color: rgb(116, 239, 34);
+}
+.item:first-child{
+    border-radius: 0 0 0 4px;
+}
+.item:last-child{
+    border-radius: 0 0 4px 0;
 }
 
-.label{
+
+.label, .percentage{
     font-size: 12px;
-    }
-    .percentage{
-        font-size: 16px;
-    }
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+}
