--- a/src/components/Statistics/TitleStat/TitleStat.module.css
+++ b/src/components/Statistics/TitleStat/TitleStat.module.css
@@ -1,6 +1,7 @@
 .title{
-    /* margin-top: 0;
-    text-align: center; */
+    /* margin-top: 0; */
+    text-align: center; 
     text-transform: uppercase;
-    color: red;
+    color: rgb(122, 122, 122);
+    margin-bottom: 20px;
 }
