--- a/src/index.css
+++ b/src/index.css
@@ -14,24 +14,23 @@ code {
     monospace;
 }
 
-p,
+
 h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p {
-    margin: 0;
+  margin: 0;
 }
-
-ul{
-    margin: 0;
-    padding-left: 0;
-    list-style-type: none;
+ul,
+ol {
+  margin: 0;
+  padding: 0;
 }
-
-.list {
-    list-style: none;
-}
-
 img {
-    display: block;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
